[tool.poetry]
name = "python-learning"
version = "0.1.0"
description = "Python 学习项目"
authors = ["logicqueue"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
coloredlogs = "15.0.1"
humanfriendly = "10.0"
pyreadline3 = "3.4.1"
pyyaml = "6.0.1"
test-poetry = {path = "F:/workspace-python/python-learning/archives/test_poetry-0.1.0.tar.gz"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
